tests/thymeleaf-tests-spring6/src/test/resources/templateengine/springintegration/errors/errors09.thtest
%EXTENDS ../springintegration.common
# ------------------------------------------------------------
%CONTEXT

bindingError01 = #{ 'binding' : 'formBean01_01',\
                    'field' : 'name',\
                    'message' : 'Name has to be < than \\'aa\\''}
bindingError02 = #{ 'binding' : 'formBean01_01',\
                    'field' : null,\
                    'message' : 'Name has to be >= than \\'ab\\''}
                    
bindingErrors = { bindingError01, bindingError02 }
# ------------------------------------------------------------
%INPUT
<form action="#" th:action="@{/process}" th:object="${formBean01_01}" method="post">

  <fieldset>

    <span th:text="${#fields.hasErrors()}">...</span>
    <span th:text="${#fields.hasErrors('*')}">...</span>
    <span th:text="${#fields.hasAnyErrors()}">...</span>
    <span th:text="${#fields.hasGlobalErrors()}">...</span>
    <span th:text="${#fields.hasErrors('date')}">...</span>
    <span th:text="${#fields.hasErrors('name')}">...</span>

    <div>
      Name: <input type="text" th:field="*{name}" />
    </div>
    
  </fieldset>
      
</form>
# ------------------------------------------------------------
%OUTPUT
<form action="/testing/process" method="post">

  <fieldset>
      
    <span>true</span>
    <span>true</span>
    <span>true</span>
    <span>true</span>
    <span>false</span>
    <span>true</span>

    <div>
      Name: <input type="text" id="name" name="name" value="Mark Lettuce" />
    </div>
    
  </fieldset>
      
</form>
